kubernetes/apps/media/base/soulsync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soulsync
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: soulsync.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soulsync
                port:
                  number: 8008

  tls:
    - hosts:
        - soulsync.homelab.leehosanganson.dev
      secretName: soulsync-tls
